# py-motion-detector

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
docs/: gen_ref_pages.py  how-to-guides.md  index.md
examples/: detect_motion_from_video.py
examples/videos/: readme.md
py_motion_detector/: motion_detection_app.py
py_motion_detector/api/cli/: py_motion_detector_basic.py  py_motion_detector_data_player.py
py_motion_detector/callbacks/: __init__.py  callback_abc.py  directory_frame_dumper.py  object_plotter.py
py_motion_detector/common/: parsers.py  plotting.py
py_motion_detector/input_sources/: __init__.py  camera.py  dummy.py  frame_provider_abc.py  image_files.py  video_file.py
py_motion_detector/models/: bounding_box.py
py_motion_detector/models/motion_detection/: motion_detection_model_abc.py  weighted_average_past_frames.py
py_motion_detector/utils/: logged_data_player.py
src/py_motion_detector/: demo.py  motion_detection_app.py
src/py_motion_detector/api/: __init__.py
src/py_motion_detector/api/cli/: py_motion_detector_basic.py  py_motion_detector_data_player.py
src/py_motion_detector/callbacks/: __init__.py  base.py  directory_frame_dumper.py  frame_file_dumper.py  frame_renderer.py
src/py_motion_detector/common/: parsers.py  plotting.py
src/py_motion_detector/input_sources/: __init__.py  base.py  camera.py  dummy.py  image_files.py  video_file.py
src/py_motion_detector/models/: __init__.py  bounding_box.py
src/py_motion_detector/models/motion_detection/: base.py  weighted_average_past_frames.py
src/py_motion_detector/utils/: logged_data_player.py
tests/: test_motion_detection_app.py
tests/common/: test_parsers.py
tests/models/test_motion_detection/: test_weighted_average_past_frames.py
tests/test_py_motion_detector/: test_motion_detection_app.py
tests/test_py_motion_detector/test_common/: test_parsers.py
tests/test_py_motion_detector/test_models/test_motion_detection/: test_weighted_average_past_frames.py
